[metadata]
name = enma
author = AlexandreSenpai
author_email = alexandrebsramos@hotmail.com
description = Enma is a Python library designed to fetch manga and doujinshi data from many sources.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlexandreSenpai/Enma
license = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    requests==2.31.0
    beautifulsoup4==4.10.0
    pydantic==2.5.3
setup_requires =
   setuptools_scm

[options.package_data]
enma = *.txt, *.rst, *.md

[tool.setuptools_scm]
write_to = enma/_version.py