[metadata]
name = enma
author = AlexandreSenpai
author_email = alexandrebsramos@hotmail.com
description = Enma is a Python library designed to fetch manga and doujinshi data from many sources.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlexandreSenpai/Enma
license = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    requests==2.32.3
    beautifulsoup4==4.12.3
    pydantic==2.8.2
    expiringdict==1.2.2
setup_requires =
   setuptools_scm

[options.package_data]
enma = *.txt, *.rst, *.md

[options.extras_require]
google_drive =
    google-api-python-client>=2.0.0
    google-auth-httplib2>=0.1.0
    google-auth-oauthlib>=0.4.0

[tool.setuptools_scm]
write_to = enma/_version.py

[coverage:run]
omit =
    */interfaces/*
    */tests/*
    enma/__init__.py
